test/e2e/fail/002-type-alias-mismatch/input.tjs
type Pair<A, B> = { first: A, second: B };
let p: Pair<Int, Int> = { first: "hello", second: 2 };
